# saper

./: CMakeLists.txt  README.MD  rescp.cmake
inc/: board.h  common.h  face.h  field.h  input.h
src/: board.c  face.c  field.c  input.c  main.c
